# physpanel

./: Cargo.toml  build.rs  build_local.cmd
.github/: README.md
.metadata/: Microsoft.Internal.winmd  generate.proj  internal.h  internal.manual.cs  main.cpp  options.rsp
src/: bindings.rs  main.rs
