[package]
name = "physpanel"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
rev = "833ec8ba443f780eb69e9fbb4ef615b012a7ef29"
features = [
    "Win32_Foundation",
]

[dependencies.windows-core]
git = "https://github.com/microsoft/windows-rs"
rev = "833ec8ba443f780eb69e9fbb4ef615b012a7ef29"

[dependencies.windows-link]
git = "https://github.com/microsoft/windows-rs"
rev = "833ec8ba443f780eb69e9fbb4ef615b012a7ef29"

[build-dependencies.windows-bindgen]
git = "https://github.com/microsoft/windows-rs"
rev = "833ec8ba443f780eb69e9fbb4ef615b012a7ef29"